[project]
name = "sbb-trains-per-route"
version = "0.1.0"
description = ""
authors = [
    {name = "EliasSchafer1",email = "117300663+EliasSchafer1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
