[project]
name = "sbb-trains-per-route"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "EliasSchafer1",email = "117300663+EliasSchafer1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.27.2,<0.28.0)",
    "branca (>=0.8.2,<0.9.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "plotly (>=6.7.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false